# hostFS

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: duckfs_extension.cpp  hostfs_extension.cpp
src/include/: duckfs_extension.hpp  hostfs_extension.hpp
src/include/scalar_functions/: duckfs.hpp  file_utils.hpp  hostfs.hpp
src/include/table_functions/: change_dir.hpp  list_dir.hpp  list_dir_recursive.hpp
test/sql/: duckfs.test  file_utils.test  hostfs.test  pragmas.test
